hello-world/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-demo
  namespace: ns-demo
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
    - name: mysql
      image: mysql:8
