hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: web
  ports:
  - name: hello-world-service-port
    protocol: TCP
    port: 80
    targetPort: nginx-http-port
